PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Valid/TupleOperands.pf
module DataStructures{

    (Int, Int, String) tupel = (1, 34, "test")

    fun main() : Int {
        Int x = tupel[1]

        return 0
    }
}